--- a/project/rentals.html
+++ b/project/rentals.html
@@ -47,132 +47,136 @@
     </nav>
   </header>
     <main class="discover-main">
-      <h1>Santiago Chamber of Commerce</h1>
-      <div class="left-column">
-        <h2>Highlights </h2>
-        <section class="history">
-          <h3>
-            Santiago in the Colonial Period
-          </h3>
-                
-          <p>Santiago gradually became a capital city, where the main institutions and buildings were established. One example
-            was the Main Church, the Palace of the Royal Court, the Governor's House and the Town Council, clear evidence
-            of it becoming a city.</p>
-          <p>Projecting itself as a strong, emerging city was imperative. To achieve this, various difficulties had to be
-            surmounted: from insurgent attacks from indigenous people who refused to accept Spanish rule, the constant floods of
-            the Mapocho River, not to mention the earthquakes that left their mark and led the city into a state of constant
-            revival.</p>
-          <p>In the course of the 18th century, Santiago began taking on modern elements. In this period great engineering works
-            were constructed, such as the Cal y Canto Bridge, which linked up the city center with the rural and northern
-            periphery of the Mapocho River.</p>
-          <p>The people of Spanish origin remained at the top of the social spectrum, being beneficiaries of the privileges and
-            the highest offices in the city. The people who were to seek Chile's emancipation from that very same aristocracy,
-            the main scenario for this being the city of Santiago, where the First National Government Junta was established on
-            18th September of 1810.</p>
-
-        </section>
-        <div class="events">
-          <section class="event-card">
-            <h3>
-              Ecommerce Innovation Summit
-            </h3>
-            <img src="images/summit-2022.webp" alt="Ecommerce Innovation" loading="lazy" width="600" height="400">
-          </section>
-          <section class="event-card">
-            <h3>
-              Fashion Online
-            </h3>
-            <img src="images/Fashion-online.webp" alt="Fashion Online" loading="lazy" width="600" height="400">
-          </section>
+      <div id="hero">
+        <div id="hero-box">
+          <img
+            id="hero-img"
+            src="images/cozumel/originals/9e.jpg"
+            alt="Conzumel beach"
+          />
         </div>
-        <div class="training">
-          <section class="training-card">
-            <h3>
-              Portal Comex Training
-            </h3>
-            <p>
-              14 de May <br>
-              09:00 Hrs. <br>
-              Online <br>
-            </p>
-          </section>
-          <section class="training-card">
-            <h3>
-              Enlaces Comerciales 2024
-            </h3>
-            <p>
-              8 de September <br>
-              11:00 Hrs. <br>
-              Online <br>
-            </p>
-          </section>
-        </div>
-        <section class="news">
-             <h3>Last Week's News</h3>
-            <img src="images/ReunionCCS.webp" alt="CCS meeting" loading="lazy" width="600" height="400">
-            <p>The Santiago Chamber of Commerce (CCS), chaired by María Teresa Vial, met with the Minister of
-              Production, Foreign Trade, Investment and Fisheries of Ecuador, Julio Prado. The meeting's purpose was to
-              strengthen commercial ties and collaboration between both nations. . .
-            </p>
+      </div>
+
+
+      <h1>Rentals</h1>
+
+        <section class="events-msg">
+          <h2>Events</h2>
+          <p>
+            In more than 30 years of uninterrupted work, the Las Condes Cultural
+            Corporation is much more than the sum of exhibitions, concerts,
+            plays, dance performances, academic season, film screenings, library
+            service, book launches, and fairs. pottery or antiques. It is an
+            institution that delivers a complete cultural proposal to the
+            community, which interrelates the different areas, serving as an
+            intermediary between the different cultural actors and establishing
+            networks between the various expressions. The Corporation reinvents
+            itself day by day, being permanently recognized for the quality of
+            its proposal and cultural offer. The Círculo de Críticos de Arte de
+            Chile honors us every year by choosing us as the official venue for
+            the delivery of its awards, which speaks for itself of the prestige
+            that our institution has achieved in the field.
+          </p>
         </section>
-      </div>
-      <div class="right-column">
-        <article class="discover-img">
-          <img src="images/sanhattan.webp" alt="sanhattan" class="image" loading="lazy" width="400" height="400">
-          <h3>Sanhattan</h3>
-          <div class="overlay">
-            <div class="text">Financial center of Santiago. It has been nicknamed Sanhattan. It is a mash-up of Santiago and
-              Manhattan.</div>
-          </div>
-        </article>
 
-        <article class="discover-img">
-          <img src="images/teleferico.webp" alt="teleferico" class="image" loading="lazy" width="400" height="400">
-          <h3>Teleferico</h3>
-          <div class="overlay">
-            <div class="text">The cable railway that connects Ciudad Empresarial and Providencia. It travels over San Cristobol
-              Hill.</div>
-          </div>
-        </article>
+        <div class="events-grid">
 
-        <article class="discover-img">
-          <img src="images/PalacioMoneda.webp" alt="Palacio Moneda" class="image" loading="lazy" width="400" height="400">
-          <h3>Palacio de la Moneda</h3>
-          <div class="overlay">
-            <div class="text">The Palacio Moneda. The national government has all of their offices here. Where congress and the
-              President work.</div>
-          </div>
-        </article>
+          <article class="all-events">
+            <img
+              src="images/rentals/scooters/honda-metropolitan-1-500.webp"
+              alt="Honda Metro Scooter model"
+              class="image"/>
+            <h3>Honda Metro Scooter</h3>
+            <div class="overlay">
+              <div class="text">
+                <b>Features</b>
+                <br><br>
+                Max Persons: 1
+                Engine Size: 49cc</div>
+            </div>
+          </article>
+
+          <article class="all-events">
+            <img
+              src="images/rentals/scooters/honda-dio-2-500.webp"
+              alt="Honda Dio Scooter model"
+              class="image"/>
+            <h3>Honda Dio Scooter</h3>
+            <div class="overlay">
+              <div class="text">
+                <b>Features</b>
+                <br><br>
+                Max Persons: 2
+                Engine Size: 110cc</div>
+            </div>
+          </article>
+
+          <article class="all-events">
+            <img
+              src="images/rentals/scooters/honda-pcx150-1-500.webp"
+              alt="Honda PCX150 Scooter model"
+              class="image"/>
+            <h3>Honda PCX150 Scooter</h3>
+            <div class="overlay">
+              <div class="text">                
+                <b>Features</b>
+                <br><br>
+                Max Persons: 2
+                Engine Size: 149cc</div>
+            </div>
+          </article>
+
+          <article class="all-events">
+            <img
+              src="images/rentals/atv/honda-pioneer-2-500.webp"
+              alt="Honda Pioneer ATV model"
+              class="image"/>
+            <h3>Honda Pioneer ATV</h3>
+            <div class="overlay">
+              <div class="text">                
+                <b>Features</b>
+                <br><br>
+                Max Persons: 4
+                Engine Size: 999cc</div>
+            </div>
+          </article>
+
+          <article class="all-events">
+            <img
+              src="images/rentals/jeeps/2door-1-500.webp"
+              alt="Jeep Wrangler - 4 door with a/c model"
+              class="image"/>
+            <h3>Jeep Wrangler - 4 door with a/c</h3>
+            <div class="overlay">
+              <div class="text">                
+                <b>Features</b>
+                <br><br>
+                Max Persons: 5
+                Engine Size: 3.6L V6</div>
+            </div>
+          </article>
+
+          <article class="all-events">
+            <img
+              src="images/rentals/jeeps/4door-1-500.webp"
+              alt="Jeep Wrangler - 2 door model"
+              class="image"/>
+            <h3>Jeep Wrangler - 2 door</h3>
+            <div class="overlay">
+              <div class="text">                
+                <b>Features</b>
+                <br><br>
+                Max Persons: 4
+                Engine Size: 3.6L V6</div>
+            </div>
+          </article>
+
+        </div>
 
 
-        <article class="discover-img">
-          <img src="images/mercadocentral.webp" alt="mercado central" class="image" loading="lazy" width="400" height="400">
-          <h3>Mercado Central</h3>
-          <div class="overlay">
-            <div class="text">An picture of the Central Market in 1890. Today it houses the largest fresh fish market in central
-              Chile.</div>
-          </div>
-        </article>
-
-
-        <article class="discover-img">
-          <img src="images/JARDINJAPONES.webp" alt="Jardin Japones" class="image" loading="lazy" width="400" height="400">
-          <h3>Jardin Japones</h3>
-          <div class="overlay">
-            <div class="text">A japanese style garden on top of San Cristobol Hill. Only accessible by bike or foot. There are no
-              roads that reach here.</div>
-          </div>
-        </article>
-
-        <article class="discover-img">
-          <img src="images/CerroSantaLucia.webp" alt="Cerro Santa Lucia" class="image" loading="lazy" width="400" height="400">
-          <h3>Cerro Santa Lucia</h3>
-          <div class="overlay">
-            <div class="text">A picture of the Neptune Plaza on top of Santa Lucia Hill. It is the only remaining part of an old
-              Spanish fort that dominated the hill.</div>
-          </div>
-        </article>
-      </div>
+      <script src="data/rentalData.json"></script>
+      <script src="js/rentals.js"></script>
+     
     </main>
 
     <footer>
