--- a/project/contact.html
+++ b/project/contact.html
@@ -9,7 +9,7 @@
   <meta property="og:image" content="https://ernesto-quispe.github.io/wdd230/project/images/cozumelName.jpg">
   <meta property="og:url" content="https://ernesto-quispe.github.io/wdd230/project">
   <title>Scooter Rental</title>
-  <meta name="description" content="Ernesto Quispe | WDD 230 - Final Proyect | Scooter Rental">
+  <meta name="description" content="Ernesto Quispe | WDD 230 - Final Proyect | Scooter Contact">
   <meta name="author" content="Ernesto Quispe">
   <link rel="apple-touch-icon" sizes="180x180" href="images/aiGenerated/favicon_io/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="images/aiGenerated/favicon_io/favicon-32x32.png">
@@ -47,88 +47,6 @@
   </header>
 
   <main class="joinus-body">
-    <h1>Applicant Information</h1>
-    <form method="get" action="thankyou.html">
-
-      <fieldset>
-        <label class="top">First Name* <input type="text" name="fname" required pattern="[A-Za-z]+" id="fname"
-            autocomplete="given-name"></label>
-        <label class="top">Last Name* <input type="text" name="lname" required pattern="[A-Za-z]+" id="lname"
-            autocomplete="family-name"></label>
-        <label class="top">Business Position Title* <input type="text" name="businesPositionTitle"
-            pattern="^[a-zA-Z\s\-]{7,}$" id="businesPositionTitle" required autocomplete="organization-title"></label>
-        <label class="top">Email* <input type="email" name="email" placeholder="someone@gmail.com" required id="email"
-            autocomplete="email"></label>
-        <label class="top">Phone* <input type="tel" name="phone" placeholder="1235551234" required id="phone"
-            autocomplete="tel"></label>
-        <label class="top">Business Name* <input type="text" name="businessName" required id="businessName"
-            autocomplete="organization"></label>
-
-
-        <h2>Membership Level</h2>
-        <div id="membershipRadio">
-          <label id="npRadio" class="sbs radio"><input type="radio" name="membershipLevel" value="np"> <span class="label-form-text"> Non Profit
-              Membership</span></label>
-          <label id="bronzeRadio" class="sbs radio"><input type="radio" name="membershipLevel" value="bronze"><span class="label-form-text">
-              Bronze Membership</span></label>
-          <label id="silverRadio" class="sbs radio"><input type="radio" name="membershipLevel" value="silver"><span class="label-form-text">
-              Silver Membership</span></label>
-          <label id="goldRadio" class="sbs radio"><input type="radio" name="membershipLevel" value="gold"> <span class="label-form-text"> Gold
-              Membership</span></label>
-        </div>
-
-        <label class="top">Please describe your business<textarea name="businessDescription"
-            placeholder="Business Description" id="businessDescription"></textarea></label>
-
-        <input type="hidden" id="date" name="date">
-
-      </fieldset>
-      <input type="submit" value="Join The Chamber" class="submitBtn">
-    </form>
-
-    <div id="memberDescription">
-      <div class="memberlevel" id="npBenefits">
-        <h3>Non Profit:</h3>
-        <p>Free option for non profit organizations.</p>
-        <p>Benefits include:</p>
-        <ul>
-          <li>Company listed as a non profit.</li>
-        </ul>  
-      </div>
-      <div class="memberlevel" id="bronzeBenefits">
-        <h3>Bronze Level:</h3>
-        <p>A yearly fee of $50.00 </p>
-        <p>Benefits include:</p>
-        <ul>
-          <li>Spotlight placement at least once a month.</li>
-          <li>Access to monthly networking events.</li>
-          <li>Listing in the online member directory.</li>
-        </ul>
-      </div>
-      <div class="memberlevel" id="silverBenefits">
-        <h3>Silver Level:</h3>
-        <p>A yearly fee of $80.00 </p>
-        <p>Benefits include:</p>
-        <ul>
-          <li>Spotlight placement at least 3 times a month.</li>
-          <li>Access to monthly networking events and quarterly workshops.</li>
-          <li>Listing in the online member directory with a highlighted profile.</li>
-          <li>One complimentary ticket to the annual Chamber gala.</li>
-        </ul>
-      </div>
-      <div class="memberlevel" id="goldBenefits">
-        <h3>Gold Level:</h3>
-        <p>A yearly fee of $150.00 </p>
-        <p>Benefits include:</p>
-        <ul>
-          <li>Spotlight placement at least once a week.</li>
-          <li>Access to all networking events, workshops, and exclusive Gold member events.</li>
-          <li>Premium listing in the online member directory with a highlighted and featured profile.</li>
-          <li>Two complimentary tickets to the annual Chamber gala.</li>
-          <li>Opportunity to host a networking event.</li>
-        </ul>
-      </div>
-    </div>
   </main>
 
   <footer>
