--- a/project/rentals.html
+++ b/project/rentals.html
@@ -29,14 +29,14 @@
 <body>
   <header>
     <div id="logoDiv">
-    <img src="images/logo-50.webp" alt="Scoots Logo">
+        <img src="images/logo-50.webp" alt="Scoots Logo">
     </div>
     <button id="menu" aria-label="menu button"></button>
     <!-- Rounded switch -->
-    <label class="switch">
+    <!-- <label class="switch">
       <input type="checkbox" id="toggleCheckbox">
       <span class="slider round"></span>
-    </label>
+    </label> -->
     <nav class="navigation">
       <a href="index.html" class="navLinks">Home</a>
       <a href="rentals.html" class="navLinks active">Rentals</a>
@@ -46,11 +46,11 @@
 
     </nav>
   </header>
-    <main class="discover-main">
-      <div id="hero">
-        <div id="hero-box">
+    <main>
+      <div id="hero-rentals">
+        <div id="hero-rentals-box">
           <img
-            id="hero-img"
+            id="hero-rentals-img"
             src="images/cozumel/originals/9e.jpg"
             alt="Conzumel beach"
           />
@@ -59,25 +59,6 @@
 
 
       <h1>Rentals</h1>
-
-        <section class="events-msg">
-          <h2>Events</h2>
-          <p>
-            In more than 30 years of uninterrupted work, the Las Condes Cultural
-            Corporation is much more than the sum of exhibitions, concerts,
-            plays, dance performances, academic season, film screenings, library
-            service, book launches, and fairs. pottery or antiques. It is an
-            institution that delivers a complete cultural proposal to the
-            community, which interrelates the different areas, serving as an
-            intermediary between the different cultural actors and establishing
-            networks between the various expressions. The Corporation reinvents
-            itself day by day, being permanently recognized for the quality of
-            its proposal and cultural offer. The Círculo de Críticos de Arte de
-            Chile honors us every year by choosing us as the official venue for
-            the delivery of its awards, which speaks for itself of the prestige
-            that our institution has achieved in the field.
-          </p>
-        </section>
 
         <div class="events-grid">
 
@@ -92,7 +73,8 @@
                 <b>Features</b>
                 <br><br>
                 Max Persons: 1
-                Engine Size: 49cc</div>
+                Engine Size: 49cc
+               </div>
             </div>
           </article>
 
@@ -172,6 +154,25 @@
           </article>
 
         </div>
+
+        <section class="events-msg">
+          <h2>Events</h2>
+          <p>
+            In more than 30 years of uninterrupted work, the Las Condes Cultural
+            Corporation is much more than the sum of exhibitions, concerts,
+            plays, dance performances, academic season, film screenings, library
+            service, book launches, and fairs. pottery or antiques. It is an
+            institution that delivers a complete cultural proposal to the
+            community, which interrelates the different areas, serving as an
+            intermediary between the different cultural actors and establishing
+            networks between the various expressions. The Corporation reinvents
+            itself day by day, being permanently recognized for the quality of
+            its proposal and cultural offer. The Círculo de Críticos de Arte de
+            Chile honors us every year by choosing us as the official venue for
+            the delivery of its awards, which speaks for itself of the prestige
+            that our institution has achieved in the field.
+          </p>
+        </section>
 
 
       <script src="data/rentalData.json"></script>
