--- a/project/contact.html
+++ b/project/contact.html
@@ -46,10 +46,16 @@
     </nav>
   </header>
 
-  <main class="joinus-body">
-  </main>
+  <main>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d119607.11665711943!2d-87.13089466094972!3d20.47659203565301!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e577e73b40c9b%3A0xf7576fa55f95f92a!2sCarnival%20Dock!5e0!3m2!1sen!2scl!4v1712460287599!5m2!1sen!2scl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-  <footer>
+
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d59789.690814190864!2d-86.98346928422492!3d20.512141829251174!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e584db5d4ae6b%3A0x7e03d3868f770983!2sPuerto%20de%20Abrigo!5e0!3m2!1sen!2scl!4v1712460383962!5m2!1sen!2scl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>  </main>
+<div style="width: 100%; overflow: hidden; height: 480px;">
+  <iframe src="https://www.google.com/maps/d/embed?mid=1Rmw-c2CWpuZOiP07A_7eO00GD2gGKng&ehbc=2E312F" width="640" height="540" style="margin-top: -60px;"></iframe>
+</div>
+</main>
+<footer>
     <p>Main location: 123 Avenida Rafael E. Melgar, Cozumel, Quintana Roo, Mexico 77600</p>
     <span> | </span>
     <p>+52 987 654 3210</p>
