--- a/project/index.html
+++ b/project/index.html
@@ -100,23 +100,65 @@
         <h3>Meet Our Best Sellers!</h3>
         <!-- Full-width images with number text -->
         <div class="mySlides">
-          <img src="./images/aiGenerated/atv3-1024x768.webp" loadings="lazy" alt="scooter picture on the beach">
+          <img src="./images/aiGenerated/atv3-1024x768-opt.webp" loadings="lazy" alt="scooter picture on the beach">
         </div>
         <div class="mySlides">
-          <img src="./images/aiGenerated/ATV1-1024x768.webp" loadings="lazy" alt="scooter picture on the beach 2">
+          <img src="./images/aiGenerated/ATV1-1024x768-opt.webp" loadings="lazy" alt="scooter picture on the beach 2">
         </div>
         <div class="mySlides">
-          <img src="./images/aiGenerated/scooter1-1024x768.webp" loadings="lazy" alt="scooter picture on the beach 3">
+          <img src="./images/aiGenerated/scooter1-1024x768-opt.webp" loadings="lazy" alt="scooter picture on the beach 3">
         </div>
         <div class="mySlides">
-          <img src="./images/aiGenerated/scooter2-1024x768.webp" loadings="lazy" alt="atv picture on the beach">
+          <img src="./images/aiGenerated/scooter2-1024x768-opt.webp" loadings="lazy" alt="atv picture on the beach">
         </div>
         <div class="mySlides">
-          <img src="./images/aiGenerated/jeep1-1024x768.webp" loadings="lazy" alt="Jeep picture on the beach">
+          <img src="./images/aiGenerated/jeep1-1024x768-opt.webp" loadings="lazy" alt="Jeep picture on the beach">
         </div>
         <div class="mySlides">
-          <img src="./images/aiGenerated/jeep2-1024x768.webp" loadings="lazy" alt="Jeep picture on the beach 2">
+          <img src="./images/aiGenerated/jeep2-1024x768-opt.webp" loadings="lazy" alt="Jeep picture on the beach 2">
         </div>
+
+<!-- 
+        <div class="mySlides">
+          <picture>
+            <source srcset="./images/aiGenerated/atv3-512x384-opt.webp" media="(max-width: 860px)">
+            <img src="./images/aiGenerated/atv3-1024x768-opt.webp" loading="lazy" alt="scooter picture on the beach">
+          </picture>
+        </div>
+        <div class="mySlides">
+          <picture>
+            <source srcset="./images/aiGenerated/ATV1-512x384-opt.webp" media="(max-width: 860px)">
+            <img src="./images/aiGenerated/ATV1-1024x768-opt.webp" loading="lazy" alt="scooter picture on the beach 2">
+          </picture>
+        </div>
+        <div class="mySlides">
+          <picture>
+            <source srcset="./images/aiGenerated/scooter1-512x384-opt.webp" media="(max-width: 860px)">
+            <img src="./images/aiGenerated/scooter1-1024x768-opt.webp" loading="lazy" alt="scooter picture on the beach 3">
+          </picture>
+        </div>
+        <div class="mySlides">
+          <picture>
+            <source srcset="./images/aiGenerated/scooter2-512x384-opt.webp" media="(max-width: 860px)">
+            <img src="./images/aiGenerated/scooter2-1024x768-opt.webp" loading="lazy" alt="atv picture on the beach">
+          </picture>
+        </div>
+        <div class="mySlides">
+          <picture>
+            <source srcset="./images/aiGenerated/jeep1-512x384-opt.webp" media="(max-width: 860px)">
+            <img src="./images/aiGenerated/jeep1-1024x768-opt.webp" loading="lazy" alt="Jeep picture on the beach">
+          </picture>
+        </div>
+        <div class="mySlides">
+          <picture>
+            <source srcset="./images/aiGenerated/jeep2-512x384-opt.webp" media="(max-width: 860px)">
+            <img src="./images/aiGenerated/jeep2-1024x768-opt.webp" loading="lazy" alt="Jeep picture on the beach 2">
+          </picture>
+        </div> -->
+
+
+
+
 
 
         <!-- Next and previous buttons -->
@@ -166,8 +208,8 @@
     <section class="cozumel-container">
       <h3>Discover Our Side of Cozumel</h3>
       <picture>
-        <source srcset="images/cozumel/cozumel-port-sign-500x375.webp" media="(max-width: 860px)">
-        <img src="images/cozumel/cozumel-port-sign.webp" loading="lazy" alt="Cozumel Port Sign">
+        <source srcset="images/cozumel/cozumel-port-sign-500x375-opt.webp" media="(max-width: 860px)">
+        <img src="images/cozumel/cozumel-port-sign-opt.webp" loading="lazy" alt="Cozumel Port Sign">
         <div class="text-overlay">
           <!-- <h4>Beautiful Cozumel</h4> -->
           <p>We love our guests that come in on the cruise ships.</p>
@@ -175,8 +217,8 @@
       </picture>
 
       <picture>
-        <source srcset="images/cozumel/beachview-500x375.webp" media="(max-width: 860px)">
-        <img src="images/cozumel/beachview.webp" loading="lazy" alt="A beach view">
+        <source srcset="images/cozumel/beachview-500x375-opt.webp" media="(max-width: 860px)">
+        <img src="images/cozumel/beachview-opt.webp" loading="lazy" alt="A beach view">
         <div class="text-overlay">
           <!-- <h4>Beautiful Cozumel</h4> -->
           <p>Our beaches are the best in the world for relaxing and enjoying the waves.</p>
@@ -184,8 +226,8 @@
       </picture>
 
       <picture>
-        <source srcset="images/cozumel/Playa-del-Carmen-houses-boats-500x375.webp" media="(max-width: 860px)">
-        <img src="images/cozumel/Playa-del-Carmen-houses-boats.webp" loading="lazy"
+        <source srcset="images/cozumel/Playa-del-Carmen-houses-boats-500x375-opt.webp" media="(max-width: 860px)">
+        <img src="images/cozumel/Playa-del-Carmen-houses-boats-opt.webp" loading="lazy"
           alt="Play del carmen with some boats in the water">
         <div class="text-overlay">
           <!-- <h4>Beautiful Cozumel</h4> -->
@@ -193,8 +235,8 @@
         </div>
       </picture>
       <picture>
-        <source srcset="images/cozumel/SoyIslaCozumel-500x375.webp" media="(max-width: 860px)">
-        <img src="images/cozumel/SoyIslaCozumel.webp" loading="lazy"
+        <source srcset="images/cozumel/SoyIslaCozumel-500x375-opt.webp" media="(max-width: 860px)">
+        <img src="images/cozumel/SoyIslaCozumel-opt.webp" loading="lazy"
           alt="Grafiti on the wall that says Soy Isla Cozumel">
         <div class="text-overlay">
           <!-- <h4>Beautiful Cozumel</h4> -->
