--- a/project/rentals.html
+++ b/project/rentals.html
@@ -59,14 +59,15 @@
 
 
       <h1>Rentals</h1>
+      <h2>Our Fleet</h2>
 
-        <div class="events-grid">
+        <div class="verhicles-grid">
 
-          <article class="all-events">
+          <article class="vehicle">
             <img
-              src="images/rentals/scooters/honda-metropolitan-1-500.webp"
+              src="images/rentals/scooter/honda-metropolitan-1-500.webp"
               alt="Honda Metro Scooter model"
-              class="image"/>
+              class="image">
             <h3>Honda Metro Scooter</h3>
             <div class="overlay">
               <div class="text">
@@ -78,9 +79,9 @@
             </div>
           </article>
 
-          <article class="all-events">
+          <article class="vehicle">
             <img
-              src="images/rentals/scooters/honda-dio-2-500.webp"
+              src="images/rentals/scooter/honda-dio-2-500.webp"
               alt="Honda Dio Scooter model"
               class="image"/>
             <h3>Honda Dio Scooter</h3>
@@ -93,9 +94,9 @@
             </div>
           </article>
 
-          <article class="all-events">
+          <article class="vehicle">
             <img
-              src="images/rentals/scooters/honda-pcx150-1-500.webp"
+              src="images/rentals/scooter/honda-pcx150-1-500.webp"
               alt="Honda PCX150 Scooter model"
               class="image"/>
             <h3>Honda PCX150 Scooter</h3>
@@ -108,7 +109,7 @@
             </div>
           </article>
 
-          <article class="all-events">
+          <article class="vehicle">
             <img
               src="images/rentals/atv/honda-pioneer-2-500.webp"
               alt="Honda Pioneer ATV model"
@@ -123,9 +124,9 @@
             </div>
           </article>
 
-          <article class="all-events">
+          <article class="vehicle">
             <img
-              src="images/rentals/jeeps/2door-1-500.webp"
+              src="images/rentals/jeep/2door-1-500.webp"
               alt="Jeep Wrangler - 4 door with a/c model"
               class="image"/>
             <h3>Jeep Wrangler - 4 door with a/c</h3>
@@ -138,9 +139,9 @@
             </div>
           </article>
 
-          <article class="all-events">
+          <article class="vehicle">
             <img
-              src="images/rentals/jeeps/4door-1-500.webp"
+              src="images/rentals/jeep/4door-1-500.webp"
               alt="Jeep Wrangler - 2 door model"
               class="image"/>
             <h3>Jeep Wrangler - 2 door</h3>
@@ -154,29 +155,28 @@
           </article>
 
         </div>
+        <h2>Models and Prices</h2>
+<section class="dataTable">
 
-        <section class="events-msg">
-          <h2>Events</h2>
-          <p>
-            In more than 30 years of uninterrupted work, the Las Condes Cultural
-            Corporation is much more than the sum of exhibitions, concerts,
-            plays, dance performances, academic season, film screenings, library
-            service, book launches, and fairs. pottery or antiques. It is an
-            institution that delivers a complete cultural proposal to the
-            community, which interrelates the different areas, serving as an
-            intermediary between the different cultural actors and establishing
-            networks between the various expressions. The Corporation reinvents
-            itself day by day, being permanently recognized for the quality of
-            its proposal and cultural offer. The Círculo de Críticos de Arte de
-            Chile honors us every year by choosing us as the official venue for
-            the delivery of its awards, which speaks for itself of the prestige
-            that our institution has achieved in the field.
-          </p>
+</section>
+        <section class="terms">
+          <h2>Rental Services and Agreements</h2>
+          <ul>
+            <li>A $50 security deposit is required to confirm reservations.</li>
+            <li>A valid drivers license is required in hand at the time of rental.</li>
+            <li>No one under the age of 12 years of age are allowed to ride on the scooters.</li>
+            <li>Fuel charge is not included.</li>
+            <li>Unlimited mileage.</li>
+            <li>Liability insurance is included.</li>
+            <li>Damage insurance is available for purchase.</li>
+            <li>Free delivery to Cozumel hotels or Airbnbs for 2+ day rentals.</li>
+            <li>Payment via Google Pay, Apple Pay, cash, credit card, debit card, or venmo.</li>
+            <li>Rentals may be returned to either physical location.</li>
+          </ul>
         </section>
 
 
-      <script src="data/rentalData.json"></script>
-      <script src="js/rentals.js"></script>
+      <script src="scripts/rentals.js"></script>
      
     </main>
 
