--- a/project/reservations.html
+++ b/project/reservations.html
@@ -49,88 +49,66 @@
   
     <main>
 
-      <h1>Applicant Information</h1>
+      <h1>Request Your Reservation</h1>
       <form method="get" action="thankyou.html">
-  
         <fieldset>
-          <label class="top">First Name* <input type="text" name="fname" required pattern="[A-Za-z]+" id="fname"
-              autocomplete="given-name"></label>
-          <label class="top">Last Name* <input type="text" name="lname" required pattern="[A-Za-z]+" id="lname"
-              autocomplete="family-name"></label>
-          <label class="top">Business Position Title* <input type="text" name="businesPositionTitle"
-              pattern="^[a-zA-Z\s\-]{7,}$" id="businesPositionTitle" required autocomplete="organization-title"></label>
-          <label class="top">Email* <input type="email" name="email" placeholder="someone@gmail.com" required id="email"
-              autocomplete="email"></label>
-          <label class="top">Phone* <input type="tel" name="phone" placeholder="1235551234" required id="phone"
-              autocomplete="tel"></label>
-          <label class="top">Business Name* <input type="text" name="businessName" required id="businessName"
-              autocomplete="organization"></label>
-  
-  
-          <h2>Membership Level</h2>
-          <div id="membershipRadio">
-            <label id="npRadio" class="sbs radio"><input type="radio" name="membershipLevel" value="np"> <span class="label-form-text"> Non Profit
-                Membership</span></label>
-            <label id="bronzeRadio" class="sbs radio"><input type="radio" name="membershipLevel" value="bronze"><span class="label-form-text">
-                Bronze Membership</span></label>
-            <label id="silverRadio" class="sbs radio"><input type="radio" name="membershipLevel" value="silver"><span class="label-form-text">
-                Silver Membership</span></label>
-            <label id="goldRadio" class="sbs radio"><input type="radio" name="membershipLevel" value="gold"> <span class="label-form-text"> Gold
-                Membership</span></label>
-          </div>
-  
-          <label class="top">Please describe your business<textarea name="businessDescription"
-              placeholder="Business Description" id="businessDescription"></textarea></label>
-  
-          <input type="hidden" id="date" name="date">
-  
+          <label class="top">Date* <input type="date" name="date" required id="date" autocomplete="date"></label>
+          <h2>Period*</h2>
+            <label for="halfday" class="sbs radio"><input type="radio" id="halfday" name="period" value="halfday"><span class="label-form-text">Half Day</span></label>
+            <label for="fullday" class="sbs radio"><input type="radio" id="fullday" name="period" value="fullday"><span class="label-form-text">Full Day</span></label>
+
+          <label class="top">Rental Type* 
+            <select name="rentaltype" id="rentaltype">
+              <option value="hondametro">Honda Metro Scooter</option>
+              <option value="hondadio">Honda Dio Scooter</option>
+              <option value="hondapcx150">Honda PCX150 Scooter</option>
+              <option value="hondapioneer">Honda Pioneer ATV</option>
+              <option value="jeep4door">Jeep Wrangler - 4 Door</option>
+              <option value="jeep2door">Jeep Wrangler - 2 Door</option>
+            </select>
+          </label>
+          <label class="top">Number of Vehicles* <input type="number" name="numvehicles" required id="numvehicles"></label>
+          <label class="top">Phone Number* <input type="tel" name="phone" required id="phone" autocomplete="tel"></label>
+          <label class="top">Full Name* <input type="text" name="fullname" required id="fullname" autocomplete="name"></label>
+          <label class="top">Email* <input type="email" name="email" required id="email" autocomplete="email"></label>
+          <label class="top">Home State or Country* <input type="text" name="homestate" required id="homestate"></label>
+          <label class="top">Cruise Line* 
+            <select name="cruiseline" id="cruiseline">
+              <option value="aida">Aida</option>
+              <option value="azamara">Azamara</option>
+              <option value="carnival">Carnival</option>
+              <option value="celebrity">Celebrity</option>
+              <option value="costa">Costa</option>
+              <option value="cruiseMaritimeVoyages">Cruise & Maritime Voyages</option>
+              <option value="crystal">Crystal</option>
+              <option value="disney">Disney</option>
+              <option value="fti">FTI</option>
+              <option value="hollandAmerica">Holland America</option>
+              <option value="hurtigruten">Hurtigruten</option>
+              <option value="msc">MSC</option>
+              <option value="norwegian">Norwegian</option>
+              <option value="oceania">Oceania</option>
+              <option value="oneOcean">One Ocean</option>
+              <option value="pAndO">P&O</option>
+              <option value="phoenix">Phoenix</option>
+              <option value="plantours">Plantours</option>
+              <option value="princess">Princess</option>
+              <option value="regentSevenSeas">Regent Seven Seas</option>
+              <option value="royalCaribbean">Royal Caribbean</option>
+              <option value="seaCloud">Sea Cloud</option>
+              <option value="silversea">Silversea</option>
+              <option value="tuiMarella">TUI Marella</option>
+              <option value="tuiMeinSchiff">TUI Mein Schiff</option>
+              <option value="viking">Viking</option>
+              <option value="virgin">Virgin</option>
+              <option value="other">Other</option>
+            </select>
+          </label>
+          <label class="top">For "Other" Please include details in field below.</label>
+          <label class="top">Special Accommodations and or Comments* <textarea name="comments" id="comments"></textarea></label>
         </fieldset>
-        <input type="submit" value="Join The Chamber" class="submitBtn">
+        <input type="submit" value="Submit" class="submitBtn">
       </form>
-  
-      <div id="memberDescription">
-        <div class="memberlevel" id="npBenefits">
-          <h3>Non Profit:</h3>
-          <p>Free option for non profit organizations.</p>
-          <p>Benefits include:</p>
-          <ul>
-            <li>Company listed as a non profit.</li>
-          </ul>  
-        </div>
-        <div class="memberlevel" id="bronzeBenefits">
-          <h3>Bronze Level:</h3>
-          <p>A yearly fee of $50.00 </p>
-          <p>Benefits include:</p>
-          <ul>
-            <li>Spotlight placement at least once a month.</li>
-            <li>Access to monthly networking events.</li>
-            <li>Listing in the online member directory.</li>
-          </ul>
-        </div>
-        <div class="memberlevel" id="silverBenefits">
-          <h3>Silver Level:</h3>
-          <p>A yearly fee of $80.00 </p>
-          <p>Benefits include:</p>
-          <ul>
-            <li>Spotlight placement at least 3 times a month.</li>
-            <li>Access to monthly networking events and quarterly workshops.</li>
-            <li>Listing in the online member directory with a highlighted profile.</li>
-            <li>One complimentary ticket to the annual Chamber gala.</li>
-          </ul>
-        </div>
-        <div class="memberlevel" id="goldBenefits">
-          <h3>Gold Level:</h3>
-          <p>A yearly fee of $150.00 </p>
-          <p>Benefits include:</p>
-          <ul>
-            <li>Spotlight placement at least once a week.</li>
-            <li>Access to all networking events, workshops, and exclusive Gold member events.</li>
-            <li>Premium listing in the online member directory with a highlighted and featured profile.</li>
-            <li>Two complimentary tickets to the annual Chamber gala.</li>
-            <li>Opportunity to host a networking event.</li>
-          </ul>
-        </div>
-      </div>
 
 
     </main>
