removed margin from map

--- a/project/contact.html
+++ b/project/contact.html
@@ -51,7 +51,7 @@
 
 
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d59789.690814190864!2d-86.98346928422492!3d20.512141829251174!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e584db5d4ae6b%3A0x7e03d3868f770983!2sPuerto%20de%20Abrigo!5e0!3m2!1sen!2scl!4v1712460383962!5m2!1sen!2scl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>  </main>
-  <iframe src="https://www.google.com/maps/d/embed?mid=1J8ESOuOVvY1Wb9l2vw8N2JkywKvGaVw&ehbc=2E312F" width="640" height="540" style="margin-top: -60px;"></iframe>
+  <iframe src="https://www.google.com/maps/d/embed?mid=1J8ESOuOVvY1Wb9l2vw8N2JkywKvGaVw&ehbc=2E312F" width="640" height="540" ></iframe>
 
 </main>
 <footer>
