--- a/project/rentals.html
+++ b/project/rentals.html
@@ -63,7 +63,7 @@
 
         <div class="verhicles-grid">
 
-          <article class="vehicle">
+          <!-- <article class="vehicle">
             <img
               src="images/rentals/scooter/honda-metropolitan-1-500.webp"
               alt="Honda Metro Scooter model"
@@ -152,7 +152,7 @@
                 Max Persons: 4
                 Engine Size: 3.6L V6</div>
             </div>
-          </article>
+          </article> -->
 
         </div>
         <h2>Models and Prices</h2>
